k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: zoom-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: zoomapp-backend
          image: tanmay0004/zoom-backend:latest
          ports:
            - containerPort: 8000
