k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: zoom-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: zoomapp-frontend
          image: tanmay0004/zoom-frontend:latest
          ports:
            - containerPort: 80
